--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@ ESTILOS:
 
                 <!-- Micro-beneficio (UX Improvement) -->
                 <p class="c-hero__benefit"
-                    style="display: flex; align-items: center; justify-content: center; gap: 0.5rem; margin-bottom: 2rem; font-size: 0.95rem;">
+                    style="display: flex; align-items: center; justify-content: center; gap: 0.5rem; margin-bottom: 2rem; font-size: 0.95rem; color: white;">
                     <span class="material-symbols-outlined"
                         style="font-size: 1.2rem; color: var(--c-lime);">check_circle</span>
                     <span data-i18n="hero.benefit">Rutas, eventos y actividades actualizadas en tiempo real</span>
