--- a/actividades.html
+++ b/actividades.html
@@ -22,107 +22,108 @@ ESTILOS:
 -->
 <html lang="es-ES">
 
-    <head>
-        <!-- 
+<head>
+    <!-- 
         ====================================
         META TAGS
         ====================================
         -->
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="description"
-            content="Actividades en el Valle de Campoo: cicloturismo, fotografía de naturaleza, talleres y más experiencias únicas.">
-        <title>Actividades - ACTEA</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description"
+        content="Actividades en el Valle de Campoo: cicloturismo, fotografía de naturaleza, talleres y más experiencias únicas.">
+    <title>Actividades - ACTEA</title>
 
-        <!-- 
+    <!-- 
         ====================================
         ESTILOS CSS
         ====================================
         -->
-        <link rel="stylesheet" href="estilo/main.css">
-        <link rel="stylesheet" href="estilo/pages/actividades.css">
-    </head>
+    <link rel="stylesheet" href="estilo/main.css">
+    <link rel="stylesheet" href="estilo/pages/actividades.css">
+</head>
 
-    <body>
-        <!-- Skip link -->
-        <a href="#main-content" class="visually-hidden">Saltar al contenido principal</a>
-        <!-- HEADER -->
-        <header class="c-header">
-            <nav class="u-container c-header__inner">
-                <a href="index.html" class="c-logo" aria-label="ACTEA Inicio">
-                    <span class="material-symbols-outlined" style="font-size: 2rem;">landscape</span>
-                    <span class="c-logo__text">ACTEA</span>
-                </a>
-                <ul class="c-nav">
-                    <li class="c-nav__list">
-                        <a href="rutas.html" class="c-nav__link">Rutas</a>
-                        <a href="novedades.html" class="c-nav__link">Calendario</a>
-                        <a href="actividades.html" class="c-nav__link c-nav__link--active">Actividades</a>
-                        <a href="rutas.html#mapa" class="c-nav__link">Mapa</a>
-                    </li>
-                </ul>
-                <div class="c-header-tools">
-                    <button class="c-header-tools__btn" aria-label="Cambiar tema">
-                        <svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 -960 960 960" width="24"
-                            fill="currentColor">
-                            <path
-                                d="M480-360q50 0 85-35t35-85q0-50-35-85t-85-35q-50 0-85 35t-35 85q0 50 35 85t85 35Zm0 80q-83 0-141.5-58.5T280-480q0-83 58.5-141.5T480-680q83 0 141.5 58.5T680-480q0 83-58.5 141.5T480-280ZM200-440H40v-80h160v80Zm720 0H760v-80h160v80ZM440-760v-160h80v160h-80Zm0 720v-160h80v160h-80ZM256-650l-101-97 57-59 96 100-52 56Zm492 496-97-101 53-55 101 97-57 59Zm-98-550 97-101 59 57-100 96-56-52ZM154-212l101-97 55 53-97 101-59-57Zm326-268Z" />
-                        </svg>
-                    </button>
-                    <button class="c-header-tools__btn" aria-label="Seleccionar idioma">
-                        <svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 -960 960 960" width="24"
-                            fill="currentColor">
-                            <path
-                                d="m476-80 182-480h84L924-80h-84l-43-122H603L560-80h-84ZM160-200l-56-56 202-202q-35-35-63.5-80T190-640h84q20 39 40 68t48 58q33-33 68.5-92.5T480-720H40v-80h280v-80h80v80h280v80H560q-20 76-63 140t-103 124l88 88-28 78-96-98-172 168Zm420-120h144l-72-204-72 204Z" />
-                        </svg>
+<body>
+    <!-- Skip link -->
+    <a href="#main-content" class="visually-hidden">Saltar al contenido principal</a>
+    <!-- HEADER -->
+    <header class="c-header">
+        <nav class="u-container c-header__inner">
+            <a href="index.html" class="c-logo" aria-label="ACTEA Inicio">
+                <span class="material-symbols-outlined" style="font-size: 2rem;">landscape</span>
+                <span class="c-logo__text">ACTEA</span>
+            </a>
+            <ul class="c-nav">
+                <li class="c-nav__list">
+                    <a href="rutas.html" class="c-nav__link">Rutas</a>
+                    <a href="novedades.html" class="c-nav__link">Calendario</a>
+                    <a href="actividades.html" class="c-nav__link c-nav__link--active">Actividades</a>
+                    <a href="rutas.html#mapa" class="c-nav__link">Mapa</a>
+                </li>
+            </ul>
+            <div class="c-header-tools">
+                <div id="widget-clima" class="weather-widget">
+                    <span class="loader">Cargando tiempo...</span>
+                </div>
+                <details class="c-lang-dropdown">
+                    <summary class="c-lang-btn" aria-label="Seleccionar idioma">
+                        <span class="material-symbols-outlined">language</span>
                         <span class="c-header-tools__lang">ES</span>
-                    </button>
-                </div>
-                <input type="checkbox" id="menu-toggle">
-                <label for="menu-toggle" class="c-menu-btn" aria-label="Abrir menú">
-                    <span class="material-symbols-outlined" style="font-size: 2rem;">menu</span>
+                        <span class="material-symbols-outlined c-lang-icon">expand_more</span>
+                    </summary>
+                    <ul class="c-lang-menu">
+                        <li><a href="?lang=es" lang="es">Espanol</a></li>
+                        <li><a href="?lang=en" lang="en">English</a></li>
+                        <li><a href="?lang=de" lang="de">Deutsch</a></li>
+                        <li><a href="?lang=fr" lang="fr">Francais</a></li>
+                    </ul>
+                </details>
+            </div>
+            <input type="checkbox" id="menu-toggle">
+            <label for="menu-toggle" class="c-menu-btn" aria-label="Abrir menu">
+                <span class="material-symbols-outlined" style="font-size: 2rem;">menu</span>
+            </label>
+            <div class="c-mobile-nav">
+                <a href="rutas.html" class="c-mobile-nav__link">Rutas</a>
+                <a href="novedades.html" class="c-mobile-nav__link">Calendario</a>
+                <a href="actividades.html" class="c-mobile-nav__link">Actividades</a>
+                <a href="rutas.html#mapa" class="c-mobile-nav__link">Mapa</a>
+                <label for="menu-toggle" class="c-mobile-nav__close">
+                    <span class="material-symbols-outlined" style="font-size: 2rem;">close</span>
                 </label>
-                <div class="c-mobile-nav">
-                    <a href="rutas.html" class="c-mobile-nav__link">Rutas</a>
-                    <a href="novedades.html" class="c-mobile-nav__link">Calendario</a>
-                    <a href="actividades.html" class="c-mobile-nav__link">Actividades</a>
-                    <a href="rutas.html#mapa" class="c-mobile-nav__link">Mapa</a>
-                    <label for="menu-toggle" class="c-mobile-nav__close">
-                        <span class="material-symbols-outlined" style="font-size: 2rem;">close</span>
-                    </label>
-                </div>
-            </nav>
-        </header>
+            </div>
+        </nav>
+    </header>
 
-        <!-- 
+    <!-- 
         ====================================
         CONTENIDO PRINCIPAL
         ====================================
         -->
-        <main id="main-content" class="l-section u-container">
+    <main id="main-content" class="l-section u-container">
 
-            <!-- 
+        <!-- 
             ====================================
             BREADCRUMBS (Migas de pan)
             ====================================
             -->
-            <nav class="c-breadcrumbs" aria-label="Migas de pan">
-                <a href="index.html">Inicio</a>
-                <span class="c-breadcrumbs__separator" aria-hidden="true">›</span>
-                <span class="c-breadcrumbs__current" aria-current="page">Actividades</span>
-            </nav>
+        <nav class="c-breadcrumbs" aria-label="Migas de pan">
+            <a href="index.html">Inicio</a>
+            <span class="c-breadcrumbs__separator" aria-hidden="true">›</span>
+            <span class="c-breadcrumbs__current" aria-current="page">Actividades</span>
+        </nav>
 
-            <!-- Título principal (h1 único) -->
-            <h1>Otras Actividades</h1>
+        <!-- Título principal (h1 único) -->
+        <h1>Otras Actividades</h1>
 
-            <!-- 
+        <!-- 
             ====================================
             GRID DE ACTIVIDADES
             ====================================
             -->
-            <div class="c-activities-grid">
+        <div class="c-activities-grid">
 
-                <!-- 
+            <!-- 
                 ====================================
                 ACTIVIDAD 1: Cicloturismo y BTT
                 ====================================
@@ -135,78 +136,141 @@ ESTILOS:
                 - Lista de características (<ul>)
                 - CTA (botón de acción)
                 -->
-                <article class="c-activity-card">
-                    <div class="c-activity-card__inner">
-                        <!-- 
+            <article class="c-activity-card">
+                <div class="c-activity-card__inner">
+                    <!-- 
                         Icono circular
                         Representa visualmente el tipo de actividad.
                         Usa fondo semi-transparente teal.
                         -->
-                        <div class="c-activity-icon">
-                            <span class="material-symbols-outlined">directions_bike</span>
-                        </div>
+                    <div class="c-activity-icon">
+                        <span class="material-symbols-outlined">directions_bike</span>
+                    </div>
 
-                        <!-- Contenido textual -->
-                        <div class="c-activity-content">
-                            <h2>Cicloturismo y BTT</h2>
+                    <!-- Contenido textual -->
+                    <div class="c-activity-content">
+                        <h2>Cicloturismo y BTT</h2>
 
-                            <p>
-                                Descubre la red de senderos habilitados para bicicleta
-                                de montaña, desde pistas forestales sencillas hasta
-                                descensos técnicos.
-                            </p>
+                        <p>
+                            Descubre la red de senderos habilitados para bicicleta
+                            de montaña, desde pistas forestales sencillas hasta
+                            descensos técnicos.
+                        </p>
 
-                            <!-- 
+                        <!-- 
                             Lista de características
                             <ul> es semánticamente correcto para listas no ordenadas
                             -->
-                            <ul class="c-activity-features">
-                                <li>Rutas guiadas de fin de semana.</li>
-                                <li>Zona de lavado y taller.</li>
-                                <li>Mapas GPS descargables.</li>
-                            </ul>
+                        <ul class="c-activity-features">
+                            <li>Rutas guiadas de fin de semana.</li>
+                            <li>Zona de lavado y taller.</li>
+                            <li>Mapas GPS descargables.</li>
+                        </ul>
 
-                            <button class="c-btn-primary">Reservar Bici</button>
-                        </div>
+                        <button class="c-btn-primary">Reservar Bici</button>
                     </div>
-                </article>
+                </div>
+            </article>
 
-                <!-- 
+            <!-- 
                 ====================================
                 ACTIVIDAD 2: Fotografía de Naturaleza
                 ====================================
                 -->
-                <article class="c-activity-card">
-                    <div class="c-activity-card__inner">
-                        <div class="c-activity-icon">
-                            <span class="material-symbols-outlined">photo_camera</span>
-                        </div>
-
-                        <div class="c-activity-content">
-                            <h2>Fotografía de Naturaleza</h2>
-
-                            <p>
-                                Aprende a capturar la esencia del valle con nuestros
-                                talleres de fin de semana impartidos por fotógrafos locales.
-                                Amaneceres, fauna y macrofotografía.
-                            </p>
-
-                            <button class="c-btn-primary">Ver Talleres</button>
-                        </div>
+            <article class="c-activity-card">
+                <div class="c-activity-card__inner">
+                    <div class="c-activity-icon">
+                        <span class="material-symbols-outlined">photo_camera</span>
                     </div>
-                </article>
+
+                    <div class="c-activity-content">
+                        <h2>Fotografía de Naturaleza</h2>
+
+                        <p>
+                            Aprende a capturar la esencia del valle con nuestros
+                            talleres de fin de semana impartidos por fotógrafos locales.
+                            Amaneceres, fauna y macrofotografía.
+                        </p>
+
+                        <button class="c-btn-primary">Ver Talleres</button>
+                    </div>
+                </div>
+            </article>
+        </div>
+    </main>
+
+    <!-- FOOTER -->
+    <footer class="c-footer">
+        <div class="u-container">
+            <div class="c-footer__grid">
+                <div class="c-footer__col">
+                    <div style="display: flex; align-items: center; gap: 0.5rem; justify-content: center;">
+                        <span class="material-symbols-outlined"
+                            style="font-size: 2rem; color: var(--c-lime);">landscape</span>
+                        <span
+                            style="font-family: 'Righteous', sans-serif; font-size: 1.5rem; color: var(--c-lime);">ACTEA</span>
+                    </div>
+                    <p style="margin-top: 1rem; font-size: 0.9rem; color: var(--c-white);">Alto Campoo Todo el Ano.
+                        Fomentando el turismo sostenible en Cantabria.</p>
+                    <div class="c-footer__socials" style="margin-top: 1.5rem;">
+                        <a href="#" class="c-footer__social-link" aria-label="Facebook">
+                            <svg xmlns="http://www.w3.org/2000/svg" height="20" viewBox="0 0 24 24" width="20"
+                                fill="currentColor">
+                                <path
+                                    d="M22 12c0-5.52-4.48-10-10-10S2 6.48 2 12c0 4.84 3.44 8.87 8 9.8V15H8v-3h2V9.5C10 7.57 11.57 6 13.5 6H16v3h-2c-.55 0-1 .45-1 1v2h3v3h-3v6.95c5.05-.5 9-4.76 9-9.95z" />
+                            </svg>
+                        </a>
+                        <a href="#" class="c-footer__social-link" aria-label="Instagram">
+                            <svg xmlns="http://www.w3.org/2000/svg" height="20" viewBox="0 0 24 24" width="20"
+                                fill="currentColor">
+                                <path
+                                    d="M7.8 2h8.4C19.4 2 22 4.6 22 7.8v8.4a5.8 5.8 0 0 1-5.8 5.8H7.8C4.6 22 2 19.4 2 16.2V7.8A5.8 5.8 0 0 1 7.8 2m-.2 2A3.6 3.6 0 0 0 4 7.6v8.8C4 18.39 5.61 20 7.6 20h8.8a3.6 3.6 0 0 0 3.6-3.6V7.6C20 5.61 18.39 4 16.4 4H7.6m9.65 1.5a1.25 1.25 0 0 1 1.25 1.25A1.25 1.25 0 0 1 17.25 8 1.25 1.25 0 0 1 16 6.75a1.25 1.25 0 0 1 1.25-1.25M12 7a5 5 0 0 1 5 5 5 5 0 0 1-5 5 5 5 0 0 1-5-5 5 5 0 0 1 5-5m0 2a3 3 0 0 0-3 3 3 3 0 0 0 3 3 3 3 0 0 0 3-3 3 3 0 0 0-3-3z" />
+                            </svg>
+                        </a>
+                        <a href="#" class="c-footer__social-link" aria-label="Twitter/X">
+                            <svg xmlns="http://www.w3.org/2000/svg" height="20" viewBox="0 0 24 24" width="20"
+                                fill="currentColor">
+                                <path
+                                    d="M18.244 2.25h3.308l-7.227 8.26 8.502 11.24H16.17l-5.214-6.817L4.99 21.75H1.68l7.73-8.835L1.254 2.25H8.08l4.713 6.231zm-1.161 17.52h1.833L7.084 4.126H5.117z" />
+                            </svg>
+                        </a>
+                    </div>
+                </div>
+                <div class="c-footer__col">
+                    <h4>Enlaces</h4>
+                    <ul>
+                        <li><a href="rutas.html">Rutas</a></li>
+                        <li><a href="novedades.html">Calendario</a></li>
+                        <li><a href="actividades.html">Actividades</a></li>
+                        <li><a href="rutas.html#mapa">Mapa</a></li>
+                    </ul>
+                </div>
+                <div class="c-footer__col">
+                    <h4>Informacion</h4>
+                    <ul>
+                        <li><a href="informacion.html#faq">FAQ</a></li>
+                        <li><a href="informacion.html#contacto">Contacto</a></li>
+                        <li><a href="#">Accesibilidad</a></li>
+                    </ul>
+                </div>
+                <div class="c-footer__col">
+                    <h4>Legal</h4>
+                    <ul>
+                        <li><a href="#">Privacidad</a></li>
+                        <li><a href="#">Terminos</a></li>
+                        <li><a href="#">Cookies</a></li>
+                    </ul>
+                </div>
             </div>
-        </main>
+            <div
+                style="text-align: center; margin-top: 3rem; padding-top: 2rem; border-top: 1px solid rgba(255,255,255,0.1); font-size: 0.85rem; color: rgba(255,255,255,0.6);">
+                2024 ACTEA. Proyecto educativo.
+            </div>
+        </div>
+    </footer>
 
-        <!-- 
-        ====================================
-        FOOTER (Carga Dinámica)
-        ====================================
-        -->
-        <div id="footer-placeholder"></div>
-
-        <!-- JavaScript -->
-        <script src="js/components.js"></script>
-    </body>
+    <!-- JavaScript -->
+    <script src="js/main.js"></script>
+</body>
 
 </html>
