--- a/index.html
+++ b/index.html
@@ -40,6 +40,10 @@ ESTILOS:
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ACTEA - Alto Campoo Todo el Año</title>
     <link rel="stylesheet" href="estilo/estilos.css">
+
+    <!-- JavaScript con defer -->
+    <script defer src="js/translations.js"></script>
+    <script defer src="js/main.js"></script>
 </head>
 
 <body>
@@ -83,7 +87,7 @@ ESTILOS:
             </div>
 
             <input type="checkbox" id="menu-toggle">
-            <label for="menu-toggle" class="c-menu-btn" aria-label="Abrir menú">
+            <label for="menu-toggle" class="c-menu-btn">
                 <span class="material-symbols-outlined" style="font-size: 2rem;">menu</span>
             </label>
 
@@ -314,7 +318,8 @@ ESTILOS:
         </section>
 
         <!-- NEWSLETTER SECTION -->
-        <section class="l-section u-container">
+        <!-- Newsletter Section -->
+        <div class="l-section u-container">
             <aside class="c-newsletter">
                 <h3 data-i18n="news.title">Mantente informado</h3>
                 <p data-i18n="news.desc">Recibe las mejores rutas, eventos y ofertas especiales en tu correo.</p>
@@ -334,30 +339,30 @@ ESTILOS:
                     </div>
                 </form>
             </aside>
-        </section>
+            </section>
 
-        <!-- ACTIVITY GRID -->
-        <section class="l-section u-container">
-            <h2 style="text-align: center;">Qué más hacer en Campoo</h2>
-            <div class="l-grid-4" style="margin-top: 2rem;">
-                <a href="actividades.html" class="c-icon-box">
-                    <span class="material-symbols-outlined">museum</span>
-                    <h4 data-i18n="grid.cultura">Culturales</h4>
-                </a>
-                <a href="actividades.html" class="c-icon-box">
-                    <span class="material-symbols-outlined">visibility</span>
-                    <h4 data-i18n="grid.avistamiento">Avistamientos</h4>
-                </a>
-                <a href="actividades.html" class="c-icon-box">
-                    <span class="material-symbols-outlined">pets</span>
-                    <h4 data-i18n="grid.hipica">Hípica</h4>
-                </a>
-                <a href="actividades.html" class="c-icon-box">
-                    <span class="material-symbols-outlined">bedtime</span>
-                    <h4 data-i18n="grid.observatorio">Observatorio</h4>
-                </a>
-            </div>
-        </section>
+            <!-- ACTIVITY GRID -->
+            <section class="l-section u-container">
+                <h2 style="text-align: center;">Qué más hacer en Campoo</h2>
+                <div class="l-grid-4" style="margin-top: 2rem;">
+                    <a href="actividades.html" class="c-icon-box">
+                        <span class="material-symbols-outlined">museum</span>
+                        <h4 data-i18n="grid.cultura">Culturales</h4>
+                    </a>
+                    <a href="actividades.html" class="c-icon-box">
+                        <span class="material-symbols-outlined">visibility</span>
+                        <h4 data-i18n="grid.avistamiento">Avistamientos</h4>
+                    </a>
+                    <a href="actividades.html" class="c-icon-box">
+                        <span class="material-symbols-outlined">pets</span>
+                        <h4 data-i18n="grid.hipica">Hípica</h4>
+                    </a>
+                    <a href="actividades.html" class="c-icon-box">
+                        <span class="material-symbols-outlined">bedtime</span>
+                        <h4 data-i18n="grid.observatorio">Observatorio</h4>
+                    </a>
+                </div>
+            </section>
     </main>
 
     <!-- IMPROVED FOOTER (Columns + Social) -->
@@ -367,34 +372,35 @@ ESTILOS:
                 <!-- Column 1: About -->
                 <div class="c-footer__col">
                     <div style="display: flex; align-items: center; gap: 0.5rem; justify-content: center;">
-                        <span class="material-symbols-outlined"
-                            style="font-size: 2rem; color: var(--c-lime);">landscape</span>
+                        <span class="material-symbols-outlined" style="font-size: 2rem; color: var(--c-lime);"
+                            aria-hidden="true">landscape</span>
                         <span
                             style="font-family: 'Righteous', sans-serif; font-size: 1.5rem; color: var(--c-lime);">ACTEA</span>
                     </div>
-                    <p style="margin-top: 1rem; font-size: 0.9rem; color: var(--c-white);" data-i18n="footer.desc">Alto
+                    <p style="margin-top: 1rem; font-size: 0.95rem; color: #E5E5E5; font-style: italic; line-height: 1.6;"
+                        data-i18n="footer.desc">Alto
                         Campoo Todo el Año.
                         Fomentando el turismo sostenible en Cantabria.</p>
 
                     <!-- Social Icons -->
                     <div class="c-footer__socials" style="margin-top: 1.5rem;">
-                        <a href="#" class="c-footer__social-link" aria-label="Facebook">
+                        <a href="#" class="c-footer__social-link" aria-label="Visitar Facebook de ACTEA">
                             <svg xmlns="http://www.w3.org/2000/svg" height="20" viewBox="0 0 24 24" width="20"
-                                fill="currentColor">
+                                fill="currentColor" aria-hidden="true">
                                 <path
                                     d="M22 12c0-5.52-4.48-10-10-10S2 6.48 2 12c0 4.84 3.44 8.87 8 9.8V15H8v-3h2V9.5C10 7.57 11.57 6 13.5 6H16v3h-2c-.55 0-1 .45-1 1v2h3v3h-3v6.95c5.05-.5 9-4.76 9-9.95z" />
                             </svg>
                         </a>
-                        <a href="#" class="c-footer__social-link" aria-label="Instagram">
+                        <a href="#" class="c-footer__social-link" aria-label="Visitar Instagram de ACTEA">
                             <svg xmlns="http://www.w3.org/2000/svg" height="20" viewBox="0 0 24 24" width="20"
-                                fill="currentColor">
+                                fill="currentColor" aria-hidden="true">
                                 <path
                                     d="M7.8 2h8.4C19.4 2 22 4.6 22 7.8v8.4a5.8 5.8 0 0 1-5.8 5.8H7.8C4.6 22 2 19.4 2 16.2V7.8A5.8 5.8 0 0 1 7.8 2m-.2 2A3.6 3.6 0 0 0 4 7.6v8.8C4 18.39 5.61 20 7.6 20h8.8a3.6 3.6 0 0 0 3.6-3.6V7.6C20 5.61 18.39 4 16.4 4H7.6m9.65 1.5a1.25 1.25 0 0 1 1.25 1.25A1.25 1.25 0 0 1 17.25 8 1.25 1.25 0 0 1 16 6.75a1.25 1.25 0 0 1 1.25-1.25M12 7a5 5 0 0 1 5 5 5 5 0 0 1-5 5 5 5 0 0 1-5-5 5 5 0 0 1 5-5m0 2a3 3 0 0 0-3 3 3 3 0 0 0 3 3 3 3 0 0 0 3-3 3 3 0 0 0-3-3z" />
                             </svg>
                         </a>
-                        <a href="#" class="c-footer__social-link" aria-label="Twitter/X">
+                        <a href="#" class="c-footer__social-link" aria-label="Visitar Twitter/X de ACTEA">
                             <svg xmlns="http://www.w3.org/2000/svg" height="20" viewBox="0 0 24 24" width="20"
-                                fill="currentColor">
+                                fill="currentColor" aria-hidden="true">
                                 <path
                                     d="M18.244 2.25h3.308l-7.227 8.26 8.502 11.24H16.17l-5.214-6.817L4.99 21.75H1.68l7.73-8.835L1.254 2.25H8.08l4.713 6.231zm-1.161 17.52h1.833L7.084 4.126H5.117z" />
                             </svg>
@@ -417,9 +423,9 @@ ESTILOS:
                 <div class="c-footer__col">
                     <h4 data-i18n="footer.info">Información</h4>
                     <ul>
-                        <li><a href="informacion.html#faq">FAQ</a></li>
-                        <li><a href="informacion.html#contacto">Contacto</a></li>
-                        <li><a href="#">Accesibilidad</a></li>
+                        <li><a href="informacion.html#faq" data-i18n="footer.link.faq">FAQ</a></li>
+                        <li><a href="informacion.html#contacto" data-i18n="footer.link.contact">Contacto</a></li>
+                        <li><a href="#" data-i18n="footer.link.accessibility">Accesibilidad</a></li>
                     </ul>
                 </div>
 
@@ -427,9 +433,9 @@ ESTILOS:
                 <div class="c-footer__col">
                     <h4 data-i18n="footer.legal">Legal</h4>
                     <ul>
-                        <li><a href="#">Privacidad</a></li>
-                        <li><a href="#">Términos</a></li>
-                        <li><a href="#">Cookies</a></li>
+                        <li><a href="#" data-i18n="footer.link.privacy">Privacidad</a></li>
+                        <li><a href="#" data-i18n="footer.link.terms">Términos</a></li>
+                        <li><a href="#" data-i18n="footer.link.cookies">Cookies</a></li>
                     </ul>
                 </div>
             </div>
@@ -440,8 +446,6 @@ ESTILOS:
             </div>
         </div>
     </footer>
-    <script src="js/translations.js"></script>
-    <script src="js/main.js"></script>
 </body>
 
 </html>
