Arreglado flasheo al darle a inicio. Ahora va a inicio#top

--- a/actividades.html
+++ b/actividades.html
@@ -30,7 +30,7 @@
     <!-- Header -->
     <header class="header">
         <div class="container header-container">
-            <a href="index.html" class="logo">
+            <a href="index.html#top" class="logo">
                 <div class="logo-brand">
                     <img src="img/logo_blanco.png" alt="Alto Campoo" class="logo-img" width="150" height="50">
                 </div>
@@ -39,7 +39,7 @@
             <!-- Navegación Desktop -->
             <nav class="nav-desktop" aria-label="Navegación principal">
                 <ul class="nav-list">
-                    <li><a href="index.html" class="nav-link">Inicio</a></li>
+                    <li><a href="index.html#top" class="nav-link">Inicio</a></li>
                     <li><a href="rutas.html" class="nav-link">Rutas</a></li>
                     <li><a href="novedades.html" class="nav-link">Novedades</a></li>
                     <li><a href="actividades.html" class="nav-link active">Actividades</a></li>
@@ -74,7 +74,7 @@
     <div class="mobile-menu-overlay"></div>
     <div class="mobile-menu" id="mobile-menu" role="dialog" aria-modal="true" aria-label="Menú de navegación" aria-hidden="true">
         <div class="mobile-menu-header">
-            <a href="index.html" class="logo mobile-logo">
+            <a href="index.html#top" class="logo mobile-logo">
                 <div class="logo-brand">
                     <img src="img/logo_blanco.png" alt="Alto Campoo" class="logo-img mobile-logo-img" width="150" height="50">
                 </div>
@@ -85,7 +85,7 @@
         </div>
         <nav aria-label="Navegación móvil">
             <ul class="mobile-nav-list">
-                <li><a href="index.html">Inicio</a></li>
+                <li><a href="index.html#top">Inicio</a></li>
                 <li><a href="rutas.html">Rutas</a></li>
                 <li><a href="novedades.html">Novedades</a></li>
                 <li><a href="actividades.html">Actividades</a></li>
@@ -159,7 +159,7 @@
                 <div class="footer-col">
                     <h3>Enlaces Rápidos</h3>
                     <ul class="footer-links">
-                        <li><a href="index.html">Inicio</a></li>
+                        <li><a href="index.html#top">Inicio</a></li>
                         <li><a href="rutas.html">Rutas</a></li>
                         <li><a href="novedades.html">Eventos</a></li>
                         <li><a href="informacion.html">Contacto</a></li>
