--- a/en/index.html
+++ b/en/index.html
@@ -56,11 +56,12 @@
 <body>
     <!-- Skip link -->
     <a href="#main-content" class="visually-hidden">Skip to main content</a>
+    <a id="top" class="visually-hidden" aria-hidden="true"></a>
 
     <!-- Header -->
     <header class="header">
         <div class="container header-container">
-            <a href="index.html" class="logo">
+            <a href="index.html#top" class="logo">
                 <div class="logo-brand">
                     <img src="../img/logo_blanco.png" alt="Alto Campoo" class="logo-img" width="150" height="50">
                 </div>
@@ -69,7 +70,7 @@
             <!-- Navegación Desktop -->
             <nav class="nav-desktop" aria-label="Main navigation">
                 <ul class="nav-list">
-                    <li><a href="index.html" class="nav-link active">Home</a></li>
+                    <li><a href="index.html#top" class="nav-link active">Home</a></li>
                     <li><a href="rutas.html" class="nav-link">Routes</a></li>
                     <li><a href="novedades.html" class="nav-link">News</a></li>
                     <li><a href="actividades.html" class="nav-link">Activities</a></li>
@@ -105,7 +106,7 @@
     <div class="mobile-menu" id="mobile-menu" role="dialog" aria-modal="true" aria-label="Navigation menu"
         aria-hidden="true">
         <div class="mobile-menu-header">
-            <a href="index.html" class="logo mobile-logo">
+            <a href="index.html#top" class="logo mobile-logo">
                 <div class="logo-brand">
                     <img src="../img/logo_blanco.png" alt="Alto Campoo" class="logo-img mobile-logo-img" width="150" height="50">
                 </div>
@@ -116,7 +117,7 @@
         </div>
         <nav aria-label="Mobile navigation">
             <ul class="mobile-nav-list">
-                <li><a href="index.html">Home</a></li>
+                <li><a href="index.html#top">Home</a></li>
                 <li><a href="rutas.html">Routes</a></li>
                 <li><a href="novedades.html">News</a></li>
                 <li><a href="actividades.html">Activities</a></li>
@@ -440,7 +441,7 @@
                 <div class="footer-col">
                     <h3>Quick Links</h3>
                     <ul class="footer-links">
-                        <li><a href="index.html">Home</a></li>
+                        <li><a href="index.html#top">Home</a></li>
                         <li><a href="rutas.html">Routes</a></li>
                         <li><a href="novedades.html">Events</a></li>
                         <li><a href="informacion.html">Contact</a></li>
