--- a/index.html
+++ b/index.html
@@ -259,11 +259,12 @@
 <body>
     <!-- Skip link -->
     <a href="#main-content" class="visually-hidden">Saltar al contenido principal</a>
+    <a id="top" class="visually-hidden" aria-hidden="true"></a>
 
     <!-- Header -->
     <header class="header">
         <div class="container header-container">
-            <a href="index.html" class="logo">
+            <a href="index.html#top" class="logo">
                 <div class="logo-brand">
                     <img src="img/logo_blanco.png" alt="Alto Campoo" class="logo-img" width="150" height="50">
                 </div>
@@ -272,7 +273,7 @@
             <!-- Navegación Desktop -->
             <nav class="nav-desktop" aria-label="Navegación principal">
                 <ul class="nav-list">
-                    <li><a href="index.html" class="nav-link active">Inicio</a></li>
+                    <li><a href="index.html#top" class="nav-link active">Inicio</a></li>
                     <li><a href="rutas.html" class="nav-link">Rutas</a></li>
                     <li><a href="novedades.html" class="nav-link">Novedades</a></li>
                     <li><a href="actividades.html" class="nav-link">Actividades</a></li>
@@ -308,7 +309,7 @@
     <div class="mobile-menu" id="mobile-menu" role="dialog" aria-modal="true" aria-label="Menú de navegación"
         aria-hidden="true">
         <div class="mobile-menu-header">
-            <a href="index.html" class="logo mobile-logo">
+            <a href="index.html#top" class="logo mobile-logo">
                 <div class="logo-brand">
                     <img src="img/logo_blanco.png" alt="Alto Campoo" class="logo-img mobile-logo-img" width="150"
                         height="50">
@@ -320,7 +321,7 @@
         </div>
         <nav aria-label="Navegación móvil">
             <ul class="mobile-nav-list">
-                <li><a href="index.html">Inicio</a></li>
+                <li><a href="index.html#top">Inicio</a></li>
                 <li><a href="rutas.html">Rutas</a></li>
                 <li><a href="novedades.html">Novedades</a></li>
                 <li><a href="actividades.html">Actividades</a></li>
@@ -647,7 +648,7 @@
                 <div class="footer-col">
                     <h3>Enlaces Rápidos</h3>
                     <ul class="footer-links">
-                        <li><a href="index.html">Inicio</a></li>
+                        <li><a href="index.html#top">Inicio</a></li>
                         <li><a href="rutas.html">Rutas</a></li>
                         <li><a href="novedades.html">Eventos</a></li>
                         <li><a href="informacion.html">Contacto</a></li>
