feat: Relocate Harabara-Bold font and add local Material Symbols Outlined font with updated CSS and HTML references.

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <!-- Estilos para todo, Carga lenta para que priorice primero el HTML -->
         <link rel="stylesheet" href="estilo/main.css" fetchpriority="low">
 
-        <!-- Google Fonts: PENDIENTE ELIMINAR FUENTA MATERIAL SYMBOLS Y PASAR A SVG ESOS ICONOS -->
+        <!-- Google Fonts: ELIMINADO PORQUE CARGA DESDE LOCAL LA FUENTE DESDE BASE.CSS -->
         <!-- <link rel="preload" as="style"
             href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0&display=swap">
         <link
